--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "fancy-react-calculator",
+  "name": "simple-react-calculator",
+  "author": "Edzon Jaeve Bausa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
